Bug 1159509 - Support audio AMR-NB for Gonk in MP4Reader. r=jya