dom/media/fmp4/gonk/GonkAudioDecoderManager.h
@@ -51,7 +51,6 @@ private:
   const uint32_t mAudioChannels;
   const uint32_t mAudioRate;
   const uint32_t mAudioProfile;
-  nsTArray<uint8_t> mUserData;
   bool mUseAdts;
 
   MediaDataDecoderCallback*  mReaderCallback;
